feature/add-partails+css
feature/add-partails+css
також додав шрифти, іконки, нормалайз та базови стилі

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+  <link rel="icon" type="image/svg+xml" href="./img/icons/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FRESH HARVEST BOX</title>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+  <!-- шрифти start -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- шрифти end -->
 
-    <script type="module" src="/main.js"></script>
-  </body>
+  <!-- normalize start -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+  <!-- normalize end -->
+
+  <!-- кастомні стилі start -->
+  <link rel="stylesheet" href="./css/styles.css">
+  <!-- кастомні стилі end -->
+</head>
+
+<body>
+  <!-- Секція header start -->
+  <load src="partials/header.html" />
+  <!-- Секція header end -->
+
+  <main>
+
+    <!-- Секція hero start -->
+    <load src="partials/hero.html" />
+    <!-- Секція hero end -->
+
+    <!-- Секція work-it start -->
+    <load src="partials/work-it.html" />
+    <!-- Секція work-it end -->
+
+    <!-- Секція fruits start -->
+    <load src="partials/fruits.html" />
+    <!-- Секція fruits end -->
+
+    <!-- Секція contacts start -->
+    <load src="partials/contacts.html" />
+    <!-- Секція contacts end -->
+
+  </main>
+  <!-- Секція footer start -->
+  <load src="partials/footer.html" />
+  <!-- Секція footer end -->
+
+  <!-- Модальне вікно your-order start -->
+  <load src="partials/your-order.html" />
+  <!-- Модальне вікно your-order end -->
+
+  <!-- Модальне вікно thank-you start -->
+  <load src="partials/thank-you.html" />
+  <!-- Модальне вікно thank-you end -->
+
+  <!-- Мобільне меню mobile-menu start -->
+  <load src="partials/mobile-menu.html" />
+  <!-- Мобільне меню mobile-menu end -->
+
+
+</body>
+
 </html>
