--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="./img/icons/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FRESH HARVEST BOX</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
-  <link rel="icon" type="image/svg+xml" href="./img/icons/logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FRESH HARVEST BOX</title>
+    <!-- шрифти start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- шрифти end -->
 
-  <!-- шрифти start -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-  <!-- шрифти end -->
+    <!-- normalize start -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- normalize end -->
 
-  <!-- normalize start -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
-  <!-- normalize end -->
+    <!-- кастомні стилі start -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- кастомні стилі end -->
+  </head>
 
-  <!-- кастомні стилі start -->
-  <link rel="stylesheet" href="./css/styles.css">
-  <!-- кастомні стилі end -->
-</head>
+  <body>
+    <!-- Секція header start -->
+    <load src="partials/header.html" />
+    <!-- Секція header end -->
 
-<body>
-  <!-- Секція header start -->
-  <load src="partials/header.html" />
-  <!-- Секція header end -->
+    <main>
+      <!-- Секція hero start -->
+      <load src="partials/hero.html" />
+      <!-- Секція hero end -->
 
-  <main>
+      <!-- Секція work-it start -->
+      <load src="partials/work-it.html" />
+      <!-- Секція work-it end -->
 
-    <!-- Секція hero start -->
-    <load src="partials/hero.html" />
-    <!-- Секція hero end -->
+      <!-- Секція fruits start -->
+      <load src="partials/fruits.html" />
+      <!-- Секція fruits end -->
 
-    <!-- Секція work-it start -->
-    <load src="partials/work-it.html" />
-    <!-- Секція work-it end -->
+      <!-- Секція contacts start -->
+      <load src="partials/contacts.html" />
+      <!-- Секція contacts end -->
+    </main>
+    <!-- Секція footer start -->
+    <load src="partials/footer.html" />
+    <!-- Секція footer end -->
 
-    <!-- Секція fruits start -->
-    <load src="partials/fruits.html" />
-    <!-- Секція fruits end -->
+    <!-- Модальне вікно your-order start -->
+    <load src="partials/your-order.html" />
+    <!-- Модальне вікно your-order end -->
 
-    <!-- Секція contacts start -->
-    <load src="partials/contacts.html" />
-    <!-- Секція contacts end -->
+    <!-- Модальне вікно thank-you start -->
+    <load src="partials/thank-you.html" />
+    <!-- Модальне вікно thank-you end -->
 
-  </main>
-  <!-- Секція footer start -->
-  <load src="partials/footer.html" />
-  <!-- Секція footer end -->
-
-  <!-- Модальне вікно your-order start -->
-  <load src="partials/your-order.html" />
-  <!-- Модальне вікно your-order end -->
-
-  <!-- Модальне вікно thank-you start -->
-  <load src="partials/thank-you.html" />
-  <!-- Модальне вікно thank-you end -->
-
-  <!-- Мобільне меню mobile-menu start -->
-  <load src="partials/mobile-menu.html" />
-  <!-- Мобільне меню mobile-menu end -->
-
-
-</body>
-
+    <!-- Мобільне меню mobile-menu start -->
+    <load src="partials/mobile-menu.html" />
+    <!-- Мобільне меню mobile-menu end -->
+  </body>
 </html>
