--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,11 @@
   <!-- Mobile-menu -->
   <load src="partials/mobile-menu.html" />
 
+  <!-- Add JS -->
+  <script src="./menu.js"></script>
+  <script src="./modal.js"></script>
+  <script src="./to-top.js"></script>
+
 </body>
 
 </html>
-
