--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
   <load src="partials/mobile-menu.html" />
 
   <!-- Add JS -->
-  <script src="./menu.js"></script>
-  <script src="./modal.js"></script>
-  <script src="./to-top.js"></script>
+  <script src="./menu.js" type="module"></script>
+  <script src="./modal.js" type="module"></script>
+  <script src="./to-top.js" type="module"></script>
 
 </body>
 
