bugfix/modal-windows

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,8 @@
   <!-- Mobile-menu -->
   <load src="partials/mobile-menu.html" />
 
+  <div class="overlay js-overlay-modal"></div>
+
   <!-- Add JS -->
   <script src="./menu.js" type="module"></script>
   <script src="./modal.js" type="module"></script>
