--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
   <load src="partials/footer.html" />
 
   <!-- Modal Your-Order -->
-  <load src="partials/your-order.html" />
+  <!-- load src="partials/your-order.html" -->
 
   <!-- Modal Thank-You -->
   <load src="partials/thank-you.html" />
