edits all and animation

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <!-- Normalize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
 
+  <!-- Animate on scroll -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <!-- Custom styles -->
   <link rel="stylesheet" href="./css/styles.css">
 
@@ -45,7 +48,7 @@
   <load src="partials/footer.html" />
 
   <!-- Modal Your-Order -->
-  <!-- load src="partials/your-order.html" -->
+  <!-- load src="partials/your-order.html"  -->
 
   <!-- Modal Thank-You -->
   <load src="partials/thank-you.html" />
@@ -59,9 +62,9 @@
   <script src="./menu.js" type="module"></script>
   <script src="./modal.js" type="module"></script>
   <script src="./to-top.js" type="module"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="./animation.js"></script>
 
 </body>
 
 </html>
-
-<!-- fix-page -->
