--- a/src/index.html
+++ b/src/index.html
@@ -59,11 +59,11 @@
   <div class="overlay js-overlay-modal"></div>
 
   <!-- Add JS -->
-  <script src="./menu.js" type="module"></script>
-  <script src="./modal.js" type="module"></script>
-  <script src="./to-top.js" type="module"></script>
+  <script src="./js/menu.js" type="module"></script>
+  <script src="./js/modal.js" type="module"></script>
+  <script src="./js/to-top.js" type="module"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="./animation.js"></script>
+  <script src="./js/animation.js"></script>
 
 </body>
 
