--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
   <script src="./js/modal.js" type="module"></script>
   <script src="./js/to-top.js" type="module"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="./js/animation.js"></script>
+  <script src="./js/animation.js" type="module"></script>
 
 </body>
 
